--- a/front/package.json
+++ b/front/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "axios": "^0.12.0",
     "classnames": "^2.2.5",
+    "leaflet": "^0.7.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-enroute": "0.0.1",
+    "react-leaflet": "^0.12.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.5",
