--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "eslint-plugin-jsx-a11y": "^1.4.2",
     "eslint-plugin-react": "^5.1.1",
     "file-loader": "^0.9.0",
+    "img-loader": "^1.3.1",
     "postcss-loader": "^0.9.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
   },
   "scripts": {
