--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   },
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.12.0",
+    "axios": "^0.13.1",
     "bcrypt-as-promised": "^1.1.0",
-    "body-parser": "^1.15.1",
+    "body-parser": "^1.15.2",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
-    "express": "^4.13.4",
+    "express": "^4.14.0",
     "express-jwt": "^3.4.0",
-    "express-session": "^1.13.0",
-    "helmet": "^2.1.1",
+    "express-session": "^1.14.0",
+    "helmet": "^2.1.2",
     "hpp": "^0.2.1",
-    "moment": "^2.13.0",
-    "mongoose": "^4.5.0",
+    "moment": "^2.14.1",
+    "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
@@ -27,27 +27,28 @@
     "toposort": "^1.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
+    "autoprefixer": "^6.3.7",
+    "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-plugin-transform-runtime": "^6.12.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.9.2",
+    "babel-runtime": "^6.11.6",
     "css-loader": "^0.23.1",
-    "cssnano": "^3.7.1",
+    "cssnano": "^3.7.3",
     "es6-promise-loader": "^1.0.1",
-    "eslint": "^3.0.0",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-import-resolver-webpack": "^0.3.0",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.4.2",
-    "eslint-plugin-react": "^5.1.1",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-import-resolver-webpack": "^0.4.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
     "file-loader": "^0.9.0",
     "img-loader": "^1.3.1",
+    "npm-check-updates": "^2.8.0",
     "postcss-loader": "^0.9.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
@@ -60,7 +61,8 @@
     "build:dev": "NODE_ENV=development webpack --progress --display-reasons --display-error-details --watch",
     "build": "NODE_ENV=production webpack",
     "lint": "eslint ./ || true",
-    "lint:fix": "eslint --fix ./ || true"
+    "lint:fix": "eslint --fix ./ || true",
+    "update": "sudo ncu -a -u"
   },
   "author": "Reuben Eggar",
   "license": "MIT"
