--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,7 @@
     "no-console": 1,
     "comma-dangle": [2, "never"],
     "space-before-function-paren": [2, "never"],
-    "space-before-blocks": [2, "never"],
+    "space-before-blocks": [2, {"functions": "never", "keywords": "never", "classes": "always"}],
     "object-curly-spacing": [2, "never"],
     "curly": [2, "multi-line"],
     "consistent-return": 0,
