--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "lint": "eslint ./ || true",
     "lint:fix": "eslint --fix ./ || true",
     "update": "sudo ncu -a -u"
+    "info": "git diff --stat 4b825dc642cb6eb9a060e54bf8d69288fbee4904 | cat"
   },
   "author": "Reuben Eggar",
   "license": "MIT"
