--- a/.eslintrc
+++ b/.eslintrc
@@ -48,7 +48,9 @@
         }
       }
     }],
-    "react/prop-types": 0
+    "react/jsx-filename-extension": 0,
+    "react/prop-types": 0,
+    "react/jsx-sort-prop": 0
   },
   "settings": {
     "import/resolver": {
