--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,11 @@
       "jsx": true
     }
   },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
   "rules": {
     "semi": [2, "never"],
     "max-len": 0,
@@ -22,6 +27,7 @@
     "consistent-return": 0,
     "block-spacing": [2, "never"],
     "space-infix-ops": 0,
+    "no-prototype-builtins": 0,
     "no-underscore-dangle": 0,
     "no-param-reassign": [2, {"props": false}],
     "keyword-spacing": [2, {
