--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.2.5",
     "leaflet": "^0.7.7",
     "mapbox-gl": "^0.21.0",
+    "moment": "^2.14.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-enroute": "0.0.1",
