--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "daylight",
   "version": "1.0.0",
-  "description": "",
+  "description": "Lifemap",
   "repository": {
     "type": "git",
     "url": "https://github.com/reubn/daylight.git"
   },
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.13.1",
+    "axios": "^0.14.0",
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.15.2",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
     "express": "^4.14.0",
-    "express-jwt": "^3.4.0",
-    "express-session": "^1.14.0",
-    "helmet": "^2.1.2",
+    "express-jwt": "^5.0.0",
+    "express-session": "^1.14.1",
+    "helmet": "^2.2.0",
     "hpp": "^0.2.1",
-    "moment": "^2.14.1",
-    "mongoose": "^4.5.8",
+    "moment": "^2.15.1",
+    "mongoose": "^4.6.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
@@ -27,32 +27,32 @@
     "toposort": "^1.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.13.2",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.12.0",
+    "autoprefixer": "^6.5.0",
+    "babel-core": "^6.14.0",
+    "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.11.6",
-    "css-loader": "^0.23.1",
-    "cssnano": "^3.7.3",
-    "es6-promise-loader": "^1.0.1",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-import-resolver-webpack": "^0.5.1",
-    "eslint-plugin-import": "^1.13.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.0.0",
+    "css-loader": "^0.25.0",
+    "cssnano": "^3.7.5",
+    "es6-promise-loader": "^1.0.2",
+    "eslint": "^3.6.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-import-resolver-webpack": "^0.6.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "file-loader": "^0.9.0",
     "img-loader": "^1.3.1",
     "npm-check-updates": "^2.8.0",
-    "postcss-loader": "^0.9.1",
+    "postcss-loader": "^0.13.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.2"
   },
   "scripts": {
     "start:dev": "NODE_ENV=development sudo node --harmony index.js",
@@ -63,7 +63,7 @@
     "lint": "eslint ./ || true",
     "lint:fix": "eslint --fix ./ || true",
     "upgrade": "npm outdated; read -p 'Press Enter to Update all dependencies to their latest versions and rewrite package.json'; sudo ncu --upgradeAll --upgrade; sudo npm update",
-    "info": "git diff --stat 4b825dc642cb6eb9a060e54bf8d69288fbee4904 | cat"
+    "info": "git diff --stat 4b825dc642cb6eb9a060e54bf8d69288fbee4904 | cat",
   },
   "author": "Reuben Eggar",
   "license": "MIT"
