--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,9 @@
-node_modules
-front/compiled
+node_modules/*
+front/compiled/*
+front/node_modules/*
+data/*
+*secure.js
+npm-debug.log*
+research/*
+.DS_Store
+webpack.config.js
