--- a/.eslintrc
+++ b/.eslintrc
@@ -70,7 +70,7 @@
   "settings": {
     "import/resolver": {
       "webpack": {
-        "config": "../webpack.config.js"
+        "config": ["../webpack.config.js", "./webpack.config.js"]
       }
     },
     "import/ignore": [(.*)?node_modules(.*)?, \.(scss|less|css)$],
