🙄 Remove Unused Dep

--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-static": "^1.11.1",
-    "toposort": "^1.0.0"
+    "serve-static": "^1.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
