--- a/package.json
+++ b/package.json
@@ -12,60 +12,56 @@
     "axios": "^0.14.0",
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
     "express": "^4.14.0",
-    "express-jwt": "^5.0.0",
+    "express-jwt": "^5.1.0",
     "express-session": "^1.14.1",
-    "helmet": "^2.2.0",
+    "helmet": "^2.3.0",
     "hpp": "^0.2.1",
+    "leaflet": "^0.7.7",
     "letsencrypt-express": "^2.0.3",
+    "mapbox-gl": "^0.21.0",
     "moment": "^2.15.1",
-    "mongoose": "^4.6.1",
+    "mongoose": "^4.6.3",
     "morgan": "^1.7.0",
+    "mousetrap": "^1.6.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-static": "^1.11.1",
-    "axios": "^0.14.0",
-    "classnames": "^2.2.5",
-    "leaflet": "^0.7.7",
-    "mapbox-gl": "^0.21.0",
-    "moment": "^2.14.1",
-    "mousetrap": "^1.6.0",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-enroute": "0.0.1",
-    "react-leaflet": "^0.12.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-leaflet": "^0.12.3",
     "react-redux": "^4.4.5",
-    "react-router": "^2.6.1",
-    "react-router-redux": "^4.0.5",
-    "redux": "^3.5.2",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
+    "redux": "^3.6.0",
     "redux-localstorage": "^0.4.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "serve-static": "^1.11.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
-    "babel-core": "^6.14.0",
+    "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.25.0",
-    "cssnano": "^3.7.5",
+    "cssnano": "^3.7.6",
     "es6-promise-loader": "^1.0.2",
-    "eslint": "^3.6.1",
+    "eslint": "^3.7.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-import-resolver-webpack": "^0.6.0",
     "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.3.0",
     "file-loader": "^0.9.0",
     "img-loader": "^1.3.1",
-    "npm-check-updates": "^2.8.0",
     "postcss-loader": "^0.13.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
