--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "express-sslify": "^1.1.0",
     "helmet": "^2.3.0",
     "hpp": "^0.2.1",
     "leaflet": "^0.7.7",
