--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "express-sslify": "^1.1.0",
     "helmet": "^2.3.0",
     "hpp": "^0.2.1",
-    "leaflet": "^0.7.7",
+    "leaflet": "^1.0.1",
     "letsencrypt-express": "^2.0.3",
-    "mapbox-gl": "^0.21.0",
+    "mapbox-gl": "^0.26.0",
     "moment": "^2.15.1",
     "mongoose": "^4.6.3",
     "morgan": "^1.7.0",
@@ -32,7 +32,7 @@
     "react": "^15.3.2",
     "react-datepicker": "^0.30.0",
     "react-dom": "^15.3.2",
-    "react-leaflet": "^0.12.3",
+    "react-leaflet": "^1.0.0-rc.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
