--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.3.2",
+    "react-copy-to-clipboard": "^4.2.3",
     "react-datepicker": "^0.30.0",
     "react-dom": "^15.3.2",
     "react-leaflet": "^1.0.0-rc.1",
