--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.2.5",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
+    "connect-redis": "^3.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "express-sslify": "^1.1.0",
