--- a/package.json
+++ b/package.json
@@ -76,11 +76,10 @@
     "start": "NODE_ENV=production sudo node --harmony index.js",
     "mongo": "sudo mongod --dbpath data/db",
     "redis": "sudo redis-server data/redis.conf",
-    "build:dev": "NODE_ENV=development webpack --progress --display-reasons --display-error-details --watch",
-    "build": "NODE_ENV=production webpack",
+    "build:dev": "NODE_ENV=development sudo webpack --progress --display-reasons --display-error-details --watch",
+    "build": "NODE_ENV=production sudo webpack",
     "lint": "eslint ./ || true",
     "lint:fix": "eslint --fix ./ || true",
-    "upgrade": "npm outdated; read -p 'Press Enter to Update all dependencies to their latest versions and rewrite package.json'; sudo ncu --upgradeAll --upgrade; sudo npm update",
     "info": "git diff --stat 4b825dc642cb6eb9a060e54bf8d69288fbee4904 | cat"
   },
   "author": "Reuben Eggar",
