--- a/.eslintrc
+++ b/.eslintrc
@@ -65,7 +65,8 @@
     "react/jsx-sort-prop": 0,
     "import/extensions": 0,
     "import/newline-after-import": 0,
-    "jsx-a11y/no-static-element-interactions": 0
+    "jsx-a11y/no-static-element-interactions": 0,
+    "jsx-a11y/label-has-for": 0
   },
   "settings": {
     "import/resolver": {
