--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "colors": "^1.1.2",
     "compression": "^1.6.2",
     "connect-redis": "^3.1.0",
+    "eslint-plugin-import": "^2.0.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "express-sslify": "^1.1.0",
-    "helmet": "^2.3.0",
+    "helmet": "^3.0.0",
     "hpp": "^0.2.1",
     "humanize-duration": "^3.9.1",
     "leaflet": "^1.0.1",
@@ -31,9 +32,10 @@
     "mousetrap": "^1.6.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "postcss-loader": "^1.1.0",
     "react": "^15.3.2",
     "react-copy-to-clipboard": "^4.2.3",
-    "react-datepicker": "^0.30.0",
+    "react-datepicker": "^0.33.0",
     "react-dom": "^15.3.2",
     "react-leaflet": "^1.0.0-rc.2",
     "react-redux": "^4.4.5",
