--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "humanize-duration": "^3.9.1",
     "leaflet": "^1.0.1",
     "letsencrypt-express": "^2.0.5",
+    "lodash.escaperegexp": "^4.1.2",
     "mapbox-gl": "^0.26.0",
     "moment": "^2.15.1",
     "mongoose": "^4.6.4",
