--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "img-loader": "^1.3.1",
     "postcss-loader": "^1.1.0",
     "style-loader": "^0.13.1",
+    "stylelint-config-primer": "^1.3.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "stylelint": "^7.5.0"
   },
   "scripts": {
     "start:dev": "NODE_ENV=development sudo node --harmony index.js",
