--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "helmet": "^3.0.0",
     "hpp": "^0.2.1",
     "humanize-duration": "^3.9.1",
-    "leaflet": "^1.0.1",
+    "leaflet": "^1.0.2",
     "letsencrypt-express": "^2.0.5",
     "lodash.escaperegexp": "^4.1.2",
     "mapbox-gl": "^0.26.0",
@@ -36,7 +36,7 @@
     "react-copy-to-clipboard": "^4.2.3",
     "react-datepicker": "^0.33.0",
     "react-dom": "^15.3.2",
-    "react-leaflet": "^1.0.0-rc.2",
+    "react-leaflet": "^1.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.6",
