--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "classnames": "^2.2.5",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
-    "connect-redis": "^3.1.0",
+    "connect-redis": "^3.2.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "express-sslify": "^1.1.0",
-    "helmet": "^3.0.0",
+    "helmet": "^3.3.0",
     "hpp": "^0.2.1",
     "humanize-duration": "^3.9.1",
     "leaflet": "^1.0.2",
@@ -28,7 +28,7 @@
     "lodash.escaperegexp": "^4.1.2",
     "mapbox-gl": "^0.29.0",
     "moment": "^2.15.1",
-    "mongoose": "^4.6.4",
+    "mongoose": "^4.7.5",
     "morgan": "^1.7.0",
     "mousetrap": "^1.6.0",
     "passport": "^0.3.2",
@@ -60,17 +60,17 @@
     "css-loader": "^0.26.1",
     "cssnano": "^3.7.6",
     "es6-promise-loader": "^1.0.2",
-    "eslint": "^3.7.1",
-    "eslint-config-airbnb": "^13.0.0",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "latest",
     "eslint-import-resolver-webpack": "^0.8.0",
-    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-import": "^2.1.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.3.0",
+    "eslint-plugin-react": "^6.6.0",
     "file-loader": "^0.9.0",
     "img-loader": "^1.3.1",
     "postcss-loader": "^1.1.0",
     "style-loader": "^0.13.1",
-    "stylelint": "^7.5.0",
+    "stylelint": "^7.7.1",
     "stylelint-config-primer": "^1.3.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
