--- a/package.json
+++ b/package.json
@@ -86,6 +86,6 @@
     "lint:fix": "eslint --fix ./ || true",
     "info": "git diff --stat 4b825dc642cb6eb9a060e54bf8d69288fbee4904 | cat"
   },
-  "author": "Reuben Eggar",
+  "author": "Reuben",
   "license": "MIT"
 }
